Use fixed pseudo-element for background to fix mobile stretching

--- a/_sass/my-style.scss
+++ b/_sass/my-style.scss
@@ -19,17 +19,17 @@
   font-display: swap;
 }
 
-body {
+body::before {
+  content: '';
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-image: url('/assets/img/backgroundimage1.jpg');
   background-size: cover;
-  background-attachment: fixed;
   background-position: center;
-}
-
-@media (max-width: 768px) {
-  body {
-    background-attachment: scroll;
-  }
+  z-index: -1;
 }
 
 
